.tekton/triggers/listener-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-webhook-ingress
  namespace: tekton-pipelines
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: dmvps.jumpingcrab.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: el-github-listener
              port:
                number: 8080
